# fastapi-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
api/: main.py
api/constants/: __init__.py  auth_constants.py  error_constants.py
api/controllers/: __init__.py  auth_controller.py  user_controller.py
api/core/: __init__.py  config.py
api/models/: __init__.py  auth_models.py  error_models.py  user_models.py
api/routes/: __init__.py  auth_routes.py  root_routes.py  user_routes.py
api/services/: __init__.py  user_services.py
api/utils/: __init__.py  auth_utils.py  update_version.py
prisma/: schema.prisma
