[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["Camilo J Sepulveda <csepulveda@smarthop.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.272"
tomlkit = "^0.11.8"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100