[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Camilo J Sepulveda <csepulveda@smarthop.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.96.0"
uvicorn = "0.22.0"
python-dotenv = "^1.0.0"
prisma = "^0.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
email-validator = "^2.0.0.post2"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.272"
tomlkit = "^0.11.8"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100